# self-raspi5-controller

./: .gitignore  CLAUDE.md  CMakeLists.txt  requirements.txt
backend/: 3dflow.yaml
backend/multi-cam/: cdk.json  package-lock.json  package.json
backend/multi-cam/lib/: multi-cam-stack.ts
backend/multi-cam/test/: multi-cam.test.ts
doc/: 01-socket-memo.md  02-tcp-memo.md
docs/: pis-ssh.md  sc-init.md
src/app/pi-zero-libcam/: time_main_client.c  time_protocol.h  time_relay_server.c  time_sub_client.c
src/client/: tcp_client.c  tcp_serve_chat.c  tcp_serve_toupper.c  tcp_serve_toupper_fork.c  udp_client.c  udp_recvfrom.c  udp_sendto.c  udp_serve_toupper.c  udp_serve_toupper_simple.c
src/common/: addr_list.c  socket_init.c  time_console.c  time_server.c  time_server_dual.c
src/common/client/: udp_client.c
src/common/server/: tcp_serve_toupper.c  tcp_serve_toupper_fork.c  udp_recvfrom.c  udp_serve_toupper.c  udp_serve_toupper_simple.c
src/common/timer/: addr_list.c  time_server_ipv6.c
src/cui/: pi_server.c  time_main_client.c
src/hq-cam-controller/: hq_cam_client.c  hq_cam_server.c
src/multi-cam/: time_sub_client.c
src/py/: best_capture.py  pi5_server.py  time_range.py  time_range_fastest.py
src/py_scripts/: camera_protocol.py  file_manager.py  hq_cam_client.py  hq_cam_server.py  new_hq_camera_client.py  new_hq_camera_server.py  pizero1_client.py  pizero2_client.py  s3_uploader.py
src/server/: tcp_client.c  tcp_serve_chat.c  tcp_serve_toupper.c  tcp_serve_toupper_fork.c  udp_client.c  udp_recvfrom.c  udp_sendto.c  udp_serve_toupper.c  udp_serve_toupper_simple.c
